# twentyspheres

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run.sh
.github/workflows/: docker-image.yml
include/: bitmap.h  color.h  cube.h  element_instance.h  environment.h  image.h  patch.h  render.h  spatial.h  transform.h  tripple.h  twenty.h  twmath.h  vertex.h
src/: main.cpp
test/: bitmap_test.cpp  cube_test.cpp  patch_test.cpp  tripple_test.cpp  twenty_test.cpp  twmath_test.cpp  vertex_test.cpp
